--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
+    --fonte-secundario: "Josefin Sans";
 }
 
 body {
