--- a/styles/header.css
+++ b/styles/header.css
@@ -53,6 +53,29 @@
     background-clip: text;
     text-transform: uppercase;
 }
-.container__botão{
+
+.container__botão {
     display: none;
+}
+
+.container__titulo {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .container__titulo,
+    .container__titulo--negrito {
+        font-family: var(--fonte-secundario);
+        font-size: 30px;
+    }
+
+    .container__titulo {
+        font-weight: 400;
+        display: block;
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
 }
